syntax = "proto3";
package event;
option java_package = "com.ferza17.ecommercemicroservicesv2.proto.v1.event";

import "google/protobuf/timestamp.proto";

message Event {
  string _id = 1;
  string aggregate_id = 2;
  string aggregate_type = 3;
  string event_type = 4;
  int32 version = 5;
  google.protobuf.Timestamp timestamp = 6;
  string saga_id = 7;
  map<string, string> metadata = 8;
  bytes payload = 9;
}

message ReserveEvent {
  string saga_id = 1;
  string aggregate_type = 2;
}